[project]
name = "exa-recruit"
version = "0.1.0"
description = "CLI tool for searching candidate profiles using Exa AI People Search"
requires-python = ">=3.11"
dependencies = [
    "exa-py>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "openai>=1.0",
]

[project.scripts]
exa-recruit = "exa_recruit.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
